# Programming_Languages

./: .gitattributes  4 - switch statement example.c  Data types Index  Exporting data before destruciton  HEADER FILE NOTES  README.md  basic meaning of function overload.txt  i++ or ++i? the difference
11.Bubble sorting with a struct/: main.c
12 - Sorting Algorithms with simple cases/: Quick_Sort.c
3 - For loops examples with numbers/: for - example.cpp
6 -if statement example - cases/: 6 - if statement with number.cpp
7 - constraint, arithmetic, boolean and equality operators/: equality operators.cpp
9 - functions/: the type void.c
Arduino/: README.md
Assembly/: Readme.md
C/: HEADER FILE NOTES.txt  README.md
C++/: C++ RAII definition.txt  C++ use of deleted function error.txt  README.md
C++/11 - String C++/std::String to const char */: CMakeLists.txt
C++/11 - String C++/std::String to const char */src/: main.cpp
C++/12 - Object Oriented Programming/Objects as parameters/: CMakeLists.txt  Makefile  cmake_install.cmake
C++/12 - Object Oriented Programming/Objects as parameters/include/: class.h
C++/12 - Object Oriented Programming/Objects as parameters/src/: class.cpp  main.cpp
Console Program - Variables uses/: console  console-app  console-app.c  data type example.cbp  data type example.depend  data type example.layout
GTK C++ UI/: README.md
Golang/: README.md
Java/: README.md
Numbers Loop/: Numbers Loop.cbp  Numbers Loop.depend  main.c
Python/: README.md
R/: README.md
RaspberryPi/: README.md
Shell/: Readme.md
(+496 files in other folders)
